tests/test_exception/bad/self_exception.catala_en
## Test

```catala
declaration scope A:
  context y content integer

scope A:
  label base_y
  exception base_y
  definition y equals 0
```

```catala-test-inline
$ catala Interpret -s A
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_exception/bad/self_exception.catala_en:5.10-11:
└─┐
5 │   context y content integer
  │           ‾
  └─ Test
[ERROR] Cannot define rule as an exception to itself

┌─⯈ tests/test_exception/bad/self_exception.catala_en:9.12-18:
└─┐
9 │   exception base_y
  │             ‾‾‾‾‾‾
  └─ Test
#return code 255#
```
